# Dialogue-to-App

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_pipeline.py
app/: main.py
app/agent/: coverage.py  critic.py  extract.py  merge.py  plan.py  render_prompt.py  v0_deploy.py
app/api/: pipeline.py  runs.py
app/core/: settings.py
app/fixtures/: dialogue1.txt
app/schemas/: gaps.py  requirements.py  spec.py
backend/: .dockerignore  .env  .env.example
backend/app/: llm.py
backend/app/agent/: pipeline.py
backend/app/schemas/: merge.py
backend/db/: __init__.py
backend/utils/: deps.py
db/: db.py  model.py
