[tool.poetry]
name = "dialogue-to-app"
version = "0.1.0"
description = "Converts product dialogues into v0 generation prompts via a multi-stage LLM pipeline."
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
openai = ">=1.0.0"
pydantic-settings = ">=2.3.0"
sqlmodel = "^0.0.38"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
